<resources>
    <string name="app_name">MyCovid Finance App</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Welcome</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!--
        Strings used in Bottom Navigation Bar
    -->
    <string name="nav1">Home</string>
    <string name="nav2">All Accounts</string>

    <string name="hello_first_fragment">Welcome!</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_next_available_paycheck_is_on_date">Your nest available paycheck is on [DATE]</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="all_accounts">All Accounts</string>
    <string name="home">Home</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_bottom_navigation">BottomNavigation</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="myhome">MyHome</string>
    <string name="your_next_available_paycheck_is_on">Your next available paycheck is on</string>
    <string name="mybanking">MyBanking</string>
    <string name="mycards">MyCards</string>
    <string name="myloans">MyLoans</string>
</resources>
